Update index.html for birthday celebration

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Maaf Ya Sayang 🥺❤️</title>
+  <title>Selamat Ulang Tahun</title>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
   <style>
     body {
@@ -85,12 +85,12 @@
   <!-- Ganti URL gambar di bawah dengan foto kalian -->
   <img src="./foto.jpeg" alt="Foto Kita Berdua">
 
-  <h1>Maafin aku ya sayang? 🥺❤️</h1>
-  <p>Aku tau kata kataku nyakitin hatimu banget, aku yang minta dispillkan bajunya, tapi aku juga yang marah, aku salah sayang, </p>
-    <p>kamu maafin aku ya, Aku janji nggak ngulangin lagi... 😢</p>
+  <h1>Happy Birthday Ke 19</h1>
+  <p>Selamat ulang tahun. Semoga senantiasa diberikan kesehatan, kebahagiaan, dan kesuksesan dalam setiap langkah. Semoga segala harapan dapat terwujud dan selalu dalam lindungan Allah SWT. </p>
+    <p>suka sama kodingan yang aku buat?</p>
   <div class="button-container">
-    <button id="yesButton" onclick="showLove()">Iya, aku maafin 💖</button>
-    <button id="noButton">Tidak 😡</button>
+    <button id="yesButton" onclick="showLove()">Iya</button>
+    <button id="noButton">Tidak</button>
   </div>
 
   <script>
@@ -104,7 +104,7 @@
     });
 
     function showLove() {
-      alert("Yay! Makasih udah maafin 😍 Sekarang kita baikan lagi ya 💕");
+      alert("Yay! kalau suka, coba klik link/salin kodingan ke dua ini https://izzulmaaali.github.io/Sella_2110/");
 
       for (let i = 0; i < 30; i++) {
         const heart = document.createElement("div");
@@ -123,3 +123,4 @@
 
 </body>
 </html>
+
