Change image and update birthday message
Updated image source and modified text content.

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 <body>
 
   <!-- Ganti URL gambar di bawah dengan foto kalian -->
-  <img src="./foto.jpeg" alt="Foto Kita Berdua">
+  <img src="./foto1.jpeg" alt="Foto Kita Berdua">
 
   <h1>Happy Birthday Ke 19</h1>
   <p>Selamat ulang tahun. Semoga senantiasa diberikan kesehatan, kebahagiaan, dan kesuksesan dalam setiap langkah. Semoga segala harapan dapat terwujud dan selalu dalam lindungan Allah SWT. </p>
-    <p>suka sama kodingan yang aku buat?</p>
+    <p>Mau Lanjut lagi?</p>
   <div class="button-container">
     <button id="yesButton" onclick="showLove()">Iya</button>
     <button id="noButton">Tidak</button>
@@ -123,4 +123,5 @@
 
 </body>
 </html>
+
 
