--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       font-size: 2.5em;
       margin-bottom: 10px;
     }
+    h2{
+      color: #e63940;
+      font-size: 3em;
+      margin-bottom: 15px;
+      margin-top: 10px;
+    }
+      
 
     p {
       font-size: 1.2em;
@@ -86,6 +93,7 @@
   <img src="./foto1.jpeg" alt="Foto Kita Berdua">
 
   <h1>Happy Birthday Ke 19</h1>
+  <h2>Kirani Oktavia Sella Romandoni</h2>
   <p>Selamat ulang tahun. Semoga senantiasa diberikan kesehatan, kebahagiaan, dan kesuksesan dalam setiap langkah. Semoga segala harapan dapat terwujud dan selalu dalam lindungan Allah SWT. </p>
     <p>Mau Lanjut lagi?</p>
   <div class="button-container">
@@ -123,6 +131,7 @@
 
 </body>
 </html>
+
 
 
 
